Added link to repository to package.json and improved description

--- a/Code/package.json
+++ b/Code/package.json
@@ -1,7 +1,8 @@
 {
   "name": "grexcept",
   "version": "1.0.0",
-  "description": "Common exception classes",
+  "description": "Common exception classes for browser and NodeJS",
+  "repository": "https://github.com/wassy92x/grexcept",
   "main": "dist/Index.js",
   "types": "dist/Index.d.ts",
   "author": "Fabian Wassenhoven <info@it-creators.de>",
