--- a/Code/package.json
+++ b/Code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grexcept",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Common exception classes for browser and NodeJS",
   "repository": "https://github.com/wassy92x/grexcept",
   "keywords": [
@@ -36,6 +36,7 @@
     "postpack": "node bin/postPack.js"
   },
   "devDependencies": {
-    "typescript": "^4.3.5"
+    "typescript": "^5.8.2",
+    "typedoc": "^0.28.1"
   }
 }
